crates/taskfleet/tests/snapshots/envelope_snapshots__event_tail_text.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
[1] [TS] run.created title=seed-run
[2] [TS] node.created node=n-0001
