crates/taskfleet/tests/snapshots/envelope_snapshots__global_invalid_output_error.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
{"schema_version":1,"error":{"code":"invalid_arguments","message":"error: invalid value 'yaml' for '--output <FMT|PATH>': expected one of text|json|jsonl or a .json/.jsonl file path; got 'yaml'"}}
