crates/taskfleet/tests/snapshots/envelope_snapshots__node_list_text.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
n-0001	spinoff	pending	0	[TS]
