crates/taskfleet/tests/snapshots/envelope_snapshots__node_show_not_found_error.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
{"schema_version":1,"error":{"code":"node_not_found","message":"no node n-9999 in run [RUN_ID]","invalid_value":"n-9999"}}
